# sheetzlabs-os

./: .gitignore  package.json  pnpm-lock.yaml  sheetzlabs-os-project-summary.md  turbo.json
.github/workflows/: deploy.yml  e2e.yml
apps/api/: package.json  tsconfig.json  wrangler.toml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: remote-access.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/e2e/: .gitignore  README.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json
apps/web/: package.json  tailwind.config.ts  tsconfig.cloudflare.json  tsconfig.node.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
docs/: actions-module-audit.md
docs/audits/: agents-audit.md  email-calendar-audit.md  email-calendar-reaudit.md  platform-triage.md
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_venture_connections.sql  003_interactions.sql  004_knowledge_agent_runs.sql  005_stripe_connections.sql  006_expenses.sql  007_venture_hub.sql  008_agent_infrastructure.sql  009_pipeline_evaluation.sql  009b_idea_evaluator_seed.sql  010_seed_remaining_agents.sql  011_unified_inbox.sql  011b_email_drafter_agent.sql  012_email_aliases.sql  013_calendar.sql  014_calendar_gcal_id.sql  015_calendar_sub_accounts.sql  016_knowledge_clips.sql  017_content_system.sql  018_analytics.sql  019_chat.sql  020_inbox_gmail_features.sql  021_email_labels_external_id.sql  023_gmail_label_id.sql  (+37 more)
(+585 files in other folders)
